# app/Modules/SalesOrder/Routes/api.php
@@ -7,6 +7,7 @@ Route::prefix('v1/sales-orders')->middleware('auth:sanctum')->group(function () 
     Route::get('/', [SalesOrderController::class, 'index']);
     Route::get('/max-discount', [SalesOrderController::class, 'getMaxDiscount']);
     Route::get('/series', [SalesOrderController::class, 'getSeries']);
+    Route::get('/credit-limit', [SalesOrderController::class, 'getCreditLimit']);
     Route::post('/', [SalesOrderController::class, 'store']);
     Route::get('/{id}', [SalesOrderController::class, 'show']);
     Route::put('/{id}', [SalesOrderController::class, 'update']);
